Header alignment fix

--- a/src/app/main-layout/header/header.component.css
+++ b/src/app/main-layout/header/header.component.css
@@ -28,3 +28,7 @@
     background-color: var(--primary-color) !important;
     border-bottom: 2px solid #1d8cf8;
 }
+
+.navbar-wrapper .row {
+    padding: 0 !important;
+}
